feat(weather): add conditionId mapping in WeatherClient and id field to OpenWeatherMap response DTOs